tests/fixtures/invalid/str_pow_float.py
# Cannot power Str and Float
x: float = "hello" ** 1.0
